tests/cases/compiler-development/artifact/errors/diagnostic-trait-impl-extra-method.diagnostic
diagnostic error code=T0001 family=type message="method 'debug' is not declared by trait 'Show'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/traits/errors/trait-impl-extra-method.ari" display="tests/cases/traits/errors/trait-impl-extra-method.ari" bytes=197
  Label index=0 role=primary source_id=0 source="tests/cases/traits/errors/trait-impl-extra-method.ari" line=10 column=6 end_line=10 end_column=11 byte_start=119 byte_end=124 message=""
  Snippet label=0 text="  --> tests/cases/traits/errors/trait-impl-extra-method.ari:10:6\n    |\n 10 |   fn debug(self) -> i64 {\n    |      ^^^^^"
